--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.25",
     "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.10",
     "expo-file-system": "~18.0.7",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
+    "expo-quick-actions": "^4.0.2",
     "expo-router": "~4.0.16",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -39,8 +42,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "zustand": "^5.0.3",
-    "expo-dev-client": "~5.0.10"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
